# blog

./: .disco_history  .gitignore  CHANGELOG.md  LICENSE  about.md  blog-brent-string.cabal  contact.md  index.html  site.hs  stack.yaml
css/: default.css  syntax.css  tufte-extra.css  tufte.css
docs/: about.html  archive.html  contact.html  index.html  rss.xml
docs/css/: default.css  pandoc.css  syntax.css  tufte-extra.css  tufte.css
docs/posts/: 2015-08-23-example.html  2023-08-22-another-post.html  about.html  blogliterately.html  catsters-guide-2.html  how-to-print-things.html
docs/posts/draft/: prefix-sums.html  sparse-table.html
docs/tag/: "quoted.html  1.0.html  194.html  2-adic.html  2010.html  2D.html  AC.html  ADH.html  ALSA.html  AMP.html  API.html  Agda.html  Arbitrary.html  BBP.html  BFS.html  Beeminder.html  Bell numbers.html  Bifunctor.html  BlogLiterately.html  Boltzmann.html  BumpTop.html  ByteString.html  CFP.html  CIS.html  CS.html  ChucK.html  Codeforces.html  DSL.html  Dijkstra.html  Disco.html  Doyle.html  EDSL.html  Eastman.html  Edinburgh.html  English.html  Ertugrul Söylemez.html  Eulerian.html  FRP.html  FTP.html  Fenwick.html  (+669 more)
drafts/: HLD.md
example-posts/: 2015-08-23-example.markdown  2023-08-22-another-post.md
posts/: 2015-08-23-example.markdown  about.markdown  blogliterately.markdown  catsters-guide-2.markdown  clean.py  how-to-print-things.markdown
posts/2025/05/: lazy-guarded.md
posts/draft/: prefix-sums.md  sparse-table.md
templates/: default.html  nextprev.html  page.html  post.html  standalone.html
tools/: clean.py
(+651 files in other folders)
