name:                blog-brent-string
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/byorgey/blog-brent-string#readme
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
copyright:           Brent Yorgey
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

executable blog-brent-string
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc,
                       SVGFonts,
                       diagrams-pandoc >= 0.3 && < 0.4
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
